--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -1,6 +1,6 @@
 <div class="row no-gutters text-center h-100">
-    <div class="col p-1 d-flex align-items-center">
-        <div class="text-center flex-grow-1">
+    <div class="col p-1 ml-1 mr-1">
+        <div class="text-center">
             <i class="fas {{ fa_class }} "></i> {{ text }}
         </div>
     </div>
