--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -30,3 +30,6 @@
 @import "~password-strength-meter/dist/password.min.css";
 // Malihu custom scrollbar plugin
 @import "~malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css";
+// Noty
+@import "~noty/src/noty.scss";
+@import "~noty/src/themes/bootstrap-v4.scss";
