--- a/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
@@ -1,10 +1,11 @@
-<div class="row no-gutters">
-    <div class="col">
-        <div class="btn btn-danger dungeonroute-clone"
-             data-publickey="{{public_key}}">{{clone_label}}</div>
-    </div>
-    <div class="col mt-2 mt-xl-0">
-        <div class="btn btn-danger dungeonroute-delete"
-             data-publickey="{{public_key}}">{{delete_label}}</div>
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        {{actions_label}}
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item dungeonroute-add-to-team" href="#">{{add_to_team_label}}</a>
+        <a class="dropdown-item dungeonroute-clone" href="#">{{clone_label}}</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item dungeonroute-delete" href="#">{{delete_label}}</a>
     </div>
 </div>
