#77 Fixed issues with permissions for users. Added actions on users.
Intended permissions are now functional. Just need to add more things to do for the Admin (delete the team, for example).
Remove user function doesn't work either yet, plus there needs to be a leave team option.
Refactored the role definitions and put them in keystoneguru.php.

--- a/resources/assets/js/handlebars/team_member_table_actions_template.handlebars
+++ b/resources/assets/js/handlebars/team_member_table_actions_template.handlebars
@@ -1,7 +1,4 @@
-<select class="form-control selectpicker role_selection" data-username="{{username}}">
-    {{#roles}}
-        {{#select role}}
-            <option value="{{name}}" data-icon="fas {{icon}}">{{label}}</option>
-        {{/select}}
-    {{/roles}}
-</select>
+<button class="btn btn-danger">
+    <span class="d-xl-none"><i class="fas fa-user-minus"></i></span>
+    <span class="d-none d-xl-block"><i class="fas fa-user-minus"></i> {{remove_label}}</span>
+</button>
