--- a/resources/assets/css/datatables.css
+++ b/resources/assets/css/datatables.css
@@ -49,7 +49,7 @@ table.dataTable {
   table.dataTable tbody tr {
     background-color: #4e5d6c; }
     table.dataTable tbody tr.selected {
-      background-color: #b0bed9; }
+      background-color: #969aa3; }
   table.dataTable tbody th,
   table.dataTable tbody td {
     padding: 8px 10px; }
@@ -237,16 +237,15 @@ table.dataTable td {
       border-radius: 2px; }
       .dataTables_wrapper .dataTables_paginate .paginate_button.current {
         color: #ebebeb !important;
-        border: 1px solid #642f0c;
+        border: none;
         background: none;
         background-color: #DF691A;
       }
       .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.current:active {
         color: #ebebeb !important;
-        border: 1px solid #642f0c;
+        border: none;
         background: none;
         background-color: #b15315;
-        border-color: #a64e13;
       }
       .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
         cursor: default;
@@ -295,17 +294,11 @@ table.dataTable td {
     width: 100%;
     height: 40px;
     margin-left: -50%;
-    margin-top: -25px;
+    margin-top: 0;
     padding-top: 20px;
     text-align: center;
     font-size: 1.2em;
-    background-color: white;
-    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(78, 93, 108, 0)), color-stop(25%, rgba(78, 93, 108, 0.9)), color-stop(75%, rgba(78, 93, 108, 0.9)), color-stop(100%, rgba(255, 255, 255, 0)));
-    background: -webkit-linear-gradient(left, rgba(78, 93, 108, 0) 0%, rgba(78, 93, 108, 0.9) 25%, rgba(78, 93, 108, 0.9) 75%, rgba(78, 93, 108, 0) 100%);
-    background: -moz-linear-gradient(left, rgba(78, 93, 108, 0) 0%, rgba(78, 93, 108, 0.9) 25%, rgba(78, 93, 108, 0.9) 75%, rgba(78, 93, 108, 0) 100%);
-    background: -ms-linear-gradient(left, rgba(78, 93, 108, 0) 0%, rgba(78, 93, 108, 0.9) 25%, rgba(78, 93, 108, 0.9) 75%, rgba(78, 93, 108, 0) 100%);
-    background: -o-linear-gradient(left, rgba(78, 93, 108, 0) 0%, rgba(78, 93, 108, 0.9) 25%, rgba(78, 93, 108, 0.9) 75%, rgba(78, 93, 108, 0) 100%);
-    background: linear-gradient(to right, rgba(78, 93, 108, 0) 0%, rgba(78, 93, 108, 0.9) 25%, rgba(78, 93, 108, 0.9) 75%, rgba(78, 93, 108, 0) 100%); }
+    background: none; }
   .dataTables_wrapper .dataTables_length,
   .dataTables_wrapper .dataTables_filter,
   .dataTables_wrapper .dataTables_info,
