--- a/resources/assets/js/handlebars/dungeonroute_table_profile_add_route_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_add_route_template.handlebars
@@ -1,3 +1,3 @@
-<button class="btn btn-success add_route_to_team" type="button" data-publickey="{{public_key}}">
+<button class="btn btn-success dungeonroute-add-to-this-team" type="button" data-publickey="{{public_key}}">
     <i class="fas fa-plus"></i> {{add_route_label}}
 </button>
