#77 Teams edit page revamp. Looks a bit better now, not done yet though!

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -79,6 +79,23 @@
     }
 }
 
+@media (min-width: 1440px) {
+    .container_wide {
+        max-width: 1400px;
+    }
+}
+
+.menu_sidebar {
+    -ms-flex: 0 0 230px;
+    flex: 0 0 230px;
+}
+
+@media (max-width: 690px) {
+    .my-sidebar {
+        display: none;
+    }
+}
+
 .left_checkbox {
     width: 40px;
 }
