--- a/resources/assets/js/handlebars/team_member_table_actions_template.handlebars
+++ b/resources/assets/js/handlebars/team_member_table_actions_template.handlebars
@@ -1,4 +1,4 @@
-<button class="btn btn-danger">
+<button class="btn btn-danger remove_user_btn" data-userid="{{user_id}}">
     <span class="d-xl-none"><i class="fas fa-user-minus"></i></span>
     <span class="d-none d-xl-block"><i class="fas fa-user-minus"></i> {{remove_label}}</span>
 </button>
