--- a/resources/assets/js/handlebars/team_member_table_permissions_self_template.handlebars
+++ b/resources/assets/js/handlebars/team_member_table_permissions_self_template.handlebars
@@ -1,1 +1,3 @@
-<i class="fas {{icon}}"></i> {{label}}
+<span class="{{#if self}}text-primary{{/if}}">
+    <i class="fas {{icon}}"></i> {{label}}
+</span>
