#77 Mobile fixes, making sure the user is removed properly.
Lots of Team related changes, the new interface now properly scales with mobile viewports.
Fixed a bunch of small issues and user removing from the team now works just fine as well.
Added a confirm dialog prior to removing users as well.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -85,9 +85,11 @@
     }
 }
 
-.menu_sidebar {
-    -ms-flex: 0 0 230px;
-    flex: 0 0 230px;
+@media (min-width: 1200px) {
+    .menu_sidebar {
+        -ms-flex: 0 0 230px;
+        flex: 0 0 230px;
+    }
 }
 
 @media (max-width: 690px) {
