--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -171,12 +171,9 @@
 }
 
 /** DATATABLES */
-.routes_table tbody tr {
+.row_selected {
+    background-color: rgba(255, 255, 255, 0.15) !important;
     cursor: pointer;
-}
-
-.routes_table .selected {
-    background-color: rgba(255, 255, 255, 0.15);
 }
 
 .routes_table .limit_width {
