#77 Converted profile page to use the new layout as used in Teams.
Removed the half finished way of adding routes to a team from your profile page. It's not really necessary and you should just do it from the profile page.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -19,6 +19,10 @@
 }
 
 /** BOOTSTRAP **/
+.cursor-pointer {
+    cursor: pointer !important;
+}
+
 @media (max-width: 576px) and (orientation: landscape) {
     .hide-on-landscape {
         display: none;
