--- a/resources/assets/css/affixes.css
+++ b/resources/assets/css/affixes.css
@@ -5,25 +5,26 @@
     border-radius: 20px;
 }
 
-.affix_icon_bolstering, .affix_icon_bursting, .affix_icon_explosive, .affix_icon_fortified, .affix_icon_grievous,
-.affix_icon_infested, .affix_icon_necrotic, .affix_icon_quaking, .affix_icon_raging, .affix_icon_relentless,
-.affix_icon_sanguine, .affix_icon_skittish, .affix_icon_teeming, .affix_icon_tyrannical, .affix_icon_volcanic,
-.affix_icon_reaping
+.affix_icon_beguiling, .affix_icon_bolstering, .affix_icon_bursting, .affix_icon_explosive, .affix_icon_fortified,
+.affix_icon_grievous, .affix_icon_infested, .affix_icon_necrotic, .affix_icon_quaking, .affix_icon_raging,
+.affix_icon_relentless, .affix_icon_sanguine, .affix_icon_skittish, .affix_icon_teeming, .affix_icon_tyrannical,
+.affix_icon_volcanic, .affix_icon_reaping
 { max-width: 100%; background-size: 100%; background-image: url('/images/affixes/affixes.png'); }
 
-.affix_icon_bolstering { background-position: 0 0; }
-.affix_icon_bursting { background-position: 0 6.66%; }
-.affix_icon_explosive { background-position: 0 13.33%; }
-.affix_icon_fortified { background-position: 0 20%; }
-.affix_icon_grievous { background-position: 0 26.66%; }
-.affix_icon_infested { background-position: 0 33.33%; }
-.affix_icon_necrotic { background-position: 0 40%; }
-.affix_icon_quaking { background-position: 0 46.66%; }
-.affix_icon_raging { background-position: 0 53.33%; }
-.affix_icon_relentless { background-position: 0 60%; }
-.affix_icon_sanguine { background-position: 0 66.66%; }
-.affix_icon_skittish { background-position: 0 73.33%; }
-.affix_icon_teeming { background-position: 0 80%; }
-.affix_icon_tyrannical { background-position: 0 86.66%; }
-.affix_icon_volcanic { background-position: 0 93.33%; }
-.affix_icon_reaping { background-position: 0 100%; }
+.affix_icon_beguiling { background-position: 0 0; }
+.affix_icon_bolstering { background-position: 0 6.25%; }
+.affix_icon_bursting { background-position: 0 12.5%; }
+.affix_icon_explosive { background-position: 0 18.75%; }
+.affix_icon_fortified { background-position: 0 25%; }
+.affix_icon_grievous { background-position: 0 31.25%; }
+.affix_icon_infested { background-position: 0 37.5%; }
+.affix_icon_necrotic { background-position: 0 43.75%; }
+.affix_icon_quaking { background-position: 0 50%; }
+.affix_icon_raging { background-position: 0 56.25%; }
+.affix_icon_reaping { background-position: 0 62.5%; }
+.affix_icon_relentless { background-position: 0 68.75%; }
+.affix_icon_sanguine { background-position: 0 75%; }
+.affix_icon_skittish { background-position: 0 81.25%; }
+.affix_icon_teeming { background-position: 0 87.5%; }
+.affix_icon_tyrannical { background-position: 0 93.75%; }
+.affix_icon_volcanic { background-position: 0 100%; }
