--- a/resources/assets/js/handlebars/map_enemy_pack_beguiling_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_pack_beguiling_row_template.handlebars
@@ -1,9 +1,9 @@
 <div id="enemy_pack_edit_popup_beguiling_row_{{id}}_{{index}}" class="row no-gutters mt-1">
     <div class="col-4">
         <input type="text" class="form-control"
-               id="enemy_pack_edit_popup_beguiling_set_{{id}}_{{index}}"
-               name="enemy_pack_edit_popup_beguiling_set_{{id}}_{{index}}"
-               value="{{set}}"/>
+               id="enemy_pack_edit_popup_beguiling_preset_{{id}}_{{index}}"
+               name="enemy_pack_edit_popup_beguiling_preset_{{id}}_{{index}}"
+               value="{{preset}}"/>
     </div>
     <div class="col-7">
         <select data-live-search="true" id="enemy_pack_edit_popup_beguiling_npc_{{id}}_{{index}}"
