--- a/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
@@ -1,9 +1,18 @@
-<div id="map_enemy_visuals" class="leaflet-draw-section">
-    <div class="form-group">
+<div class="leaflet-draw-section">
+    <div id="map_enemy_visuals" class="form-group">
         <div class="font-weight-bold">{{ enemy_display_type_label }}:</div>
         <select id="map_enemy_visuals_dropdown" class="form-control selectpicker" name="map_enemy_visuals_dropdown">
             <option value="aggressiveness">{{ aggressiveness_label }}</option>
             <option value="enemy_forces">{{ enemy_forces_label }}</option>
+        </select>
+    </div>
+
+    <div id="map_enemy_beguiling_preset" class="form-group">
+        <div class="font-weight-bold">{{ beguiling_preset_label }}:</div>
+        <select id="map_enemy_beguiling_preset_dropdown" class="form-control selectpicker" name="map_enemy_beguiling_preset_dropdown">
+            {{#beguiling_presets}}
+                <option value="{{index}}">{{description}}</option>
+            {{/beguiling_presets}}
         </select>
     </div>
 
