--- a/resources/assets/js/handlebars/map_enemy_pack_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_pack_template.handlebars
@@ -1,6 +1,8 @@
 <div class="popupCustom">
     <div class="form-group">
-        <label for="enemy_pack_edit_popup_teeming_{{id}}">{{teeming_label}}</label>
+        <div class="row">
+            <label class="col" for="enemy_pack_edit_popup_teeming_{{id}}">{{teeming_label}}</label>
+        </div>
         <select data-live-search="true" id="enemy_pack_edit_popup_teeming_{{id}}"
                 name="enemy_pack_edit_popup_teeming_{{id}}"
                 class="selectpicker popup_select" data-width="300px">
@@ -10,14 +12,35 @@
         </select>
     </div>
     <div class="form-group">
-        <label for="enemy_pack_edit_popup_faction_{{id}}">{{faction_label}}</label>
+        <div class="row">
+            <label class="col" for="enemy_pack_edit_popup_faction_{{id}}">{{faction_label}}</label>
+        </div>
         <select data-live-search="true" id="enemy_pack_edit_popup_faction_{{id}}"
                 name="enemy_pack_edit_popup_faction_{{id}}"
                 class="selectpicker popup_select" data-width="300px">
             {{#factions}}
-            <option value="{{key}}">{{description}}</option>
+                <option value="{{key}}">{{description}}</option>
             {{/factions}}
         </select>
+    </div>
+    <div class="form-group">
+        <div class="row">
+            <label class="col">{{beguiling_npcs_label}}</label>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-4">
+                {{preset_label}}
+            </div>
+            <div class="col-8">
+                {{npc_label}}
+            </div>
+        </div>
+        <div id="enemy_pack_edit_popup_beguiling_container_{{id}}">
+
+        </div>
+        <button id="enemy_pack_edit_popup_beguiling_add_{{id}}" class="btn btn-success mt-2">
+            {{add_label}}
+        </button>
     </div>
     <input type="submit" id="enemy_pack_edit_popup_submit_{{id}}" class="btn btn-info"/>
 </div>
