--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -255,6 +255,11 @@ html, body, #map, #app, .wrapper {
     font-size: 14px;
 }
 
+/** Fix display type/beguiling enemy preset not filling full width of sidebar */
+#map_enemy_visuals_container .leaflet-draw-section.leaflet-control {
+    width: 100%;
+}
+
 #map-controls {
     height: 700px;
 }
@@ -400,6 +405,7 @@ html, body, #map, #app, .wrapper {
     border-radius: 6px;
     background-blend-mode: hard-light;
 }
+
 .teeming {
     border: 1px solid red;
 }
@@ -408,7 +414,7 @@ html, body, #map, #app, .wrapper {
     background-color: #dc3c3c !important;
 }
 
-.aggressive_enemy_icon.beguiling  {
+.aggressive_enemy_icon.beguiling {
     background-color: purple !important;
 }
 
