--- a/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_controls_route_edit_button_template.handlebars
@@ -1,5 +1,5 @@
 <div class="row no-gutters text-center h-100">
-    <div style="position: absolute; left: 10px; top: 0; z-index: 1;">
+    <div class="d-md-block d-none button_hotkey_label">
         {{hotkey}}
     </div>
     <div class="col p-1 ml-1 mr-1" style="display: flex; justify-content: center; align-items: center;">
