#205 Enemies now scale according to their health.
Also did a small fix that will hopefully color the enemies properly on mobile devices.

--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -8,8 +8,8 @@
     <div class="modifier modifier_2 {{modifier_2_classes}}" style="display: none;">
         {{{modifier_2_html}}}
     </div>
-    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}">
-        <div class="{{main_visual_classes}}">
+    <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}" style="width: {{width}}px; height: {{height}}px;">
+        <div class="{{main_visual_classes}}" style="width: {{width}}px; height: {{height}}px;">
             {{{main_visual_html}}}
         </div>
     </div>
