--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -334,12 +334,6 @@ html, body, #map, #app, .wrapper {
     opacity: 1;
 }
 
-.selected_enemy_icon,
-.enemy_icon {
-    width: 11px;
-    height: 11px;
-}
-
 .mdt_enemy_icon.leaflet-edit-marker-selected {
     border-color: yellow !important;
     margin-top: -9px !important;
@@ -409,8 +403,9 @@ html, body, #map, #app, .wrapper {
     background-image: url("/images/mapicon/unset.png") !important; /* no-repeat center !important; */
     background-repeat: no-repeat;
     background-position: center;
-    border-radius: 6px;
-    background-blend-mode: hard-light;
+    background-size: cover;
+    border-radius: 16px;
+    background-blend-mode: luminosity;
 }
 
 .teeming {
