--- a/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visuals_template.handlebars
@@ -2,6 +2,7 @@
     <div id="map_enemy_visuals" class="form-group">
         <div class="font-weight-bold">{{ enemy_display_type_label }}:</div>
         <select id="map_enemy_visuals_dropdown" class="form-control selectpicker" name="map_enemy_visuals_dropdown">
+            <option value="npc_type">{{ npc_type_label }}</option>
             <option value="aggressiveness">{{ aggressiveness_label }}</option>
             <option value="enemy_forces">{{ enemy_forces_label }}</option>
         </select>
