--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -1,11 +1,11 @@
 <div style="position: relative;">
-    <div class="modifier modifier_0 {{modifier_0_classes}}" style="display: none;">
+    <div class="modifier modifier_0 {{modifier_0_classes}}" style="display: none; left: {{modifier_0_left}}px;">
         {{{modifier_0_html}}}
     </div>
-    <div class="modifier modifier_1 {{modifier_1_classes}}" style="display: none;">
+    <div class="modifier modifier_1 {{modifier_1_classes}}" style="display: none; left: {{modifier_1_left}}px;">
         {{{modifier_1_html}}}
     </div>
-    <div class="modifier modifier_2 {{modifier_2_classes}}" style="display: none;">
+    <div class="modifier modifier_2 {{modifier_2_classes}}" style="display: none; left: {{modifier_2_left}}px;">
         {{{modifier_2_html}}}
     </div>
     <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}" style="width: {{width}}px; height: {{height}}px;">
