#212 Enemies scaled according to zoom level WIP

--- a/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
@@ -26,6 +26,10 @@
         <div class="col-7 no-gutters">{{ id }}</div>
     </div>
     <div class="row">
+        <div class="col-5 no-gutters">{{ size_label }}</div>
+        <div class="col-7 no-gutters">{{ size }}</div>
+    </div>
+    <div class="row">
         <div class="col-5 no-gutters">{{ faction_label }}</div>
         <div class="col-7 no-gutters">{{ faction }}</div>
     </div>
