--- a/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_visual_template.handlebars
@@ -9,8 +9,8 @@
         {{{modifier_2_html}}}
     </div>
     <div id="map_enemy_visual_{{id}}" class="{{selection_classes_base}} {{selection_classes}}">
-        <div class="{{main_visual_outer_classes}}" style="width: {{outer_width}}px; height: {{outer_height}}px;">
-            <div class="{{main_visual_inner_classes}}" style="width: {{width}}px; height: {{height}}px; margin:{{margin}}px;
+        <div class="{{main_visual_outer_classes}}" style="width: {{outer_width}}; height: {{outer_height}};">
+            <div class="{{main_visual_inner_classes}}" style="width: {{inner_width}}; height: {{inner_height}}; margin:{{margin}}px;
                     ">
                 {{{main_visual_html}}}
             </div>
